# SimpleGames

./: .gitignore  CMakeLists.txt  README.md
2048/: CMakeLists.txt
2048/rsc/: 2048.conf
2048/src/: board.cpp  board.hpp  canvas.cpp  canvas.hpp  header.cpp  header.hpp  header_widget.cpp  header_widget.hpp  main.cpp  matrix.cpp  matrix.hpp  matrix_widget.cpp  matrix_widget.hpp  scaling.cpp  scaling.hpp  score_board.cpp  score_board.hpp  square_array.hpp  tile.cpp  tile.hpp
